fixed body overflow style issue

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -7,6 +7,10 @@
 
 html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
+  /** GET RID OF THIS WHEN POSSIBLE */
+  overflow: hidden;
 }
 
 body {
